# brighttalk-recover

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup-dev.py
.github/workflows/: ci.yml  docker-publish.yml  github-release.yml  publish-pypi.yml  publish.yml  test-publish.yml
bt-recover/: __init__.py  main.py
src/bt_recover/: __init__.py  __main__.py  __version__.py  cli.py  config.py  exceptions.py  main.py  monitoring.py  progress.py
test_env/: pyvenv.cfg
tests/: test_downloader.py  test_integration.py
